--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.3.3
-flask-cors==4.0.0
-openai==1.30.1
-python-dotenv==1.0.1
-PyPDF2==3.0.1
-gunicorn==22.0.0
+Flask
+flask-cors
+python-dotenv
+PyPDF2
+openai>=1.0.0
+gunicorn
